--- a/PRODIGY_WD_02/index.html
+++ b/PRODIGY_WD_02/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Stopwatch Application</h1>
     <div class="container">
         <div class="timer-display">
             00 : 00 : 00 : 00
@@ -23,6 +24,12 @@
             <button id="resetLap" onclick="resetLap()">Reset Lap</button>
         </div>
     </div>
+    <footer>
+        <div class="center">
+            Copyright &copy; Nihar All rights reserved!
+        </div>
+    </footer>
     <script src="script.js"></script>
+    
 </body>
 </html>
